[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gpblib"
version = "0.1.0"
description = "Common code for the GroupPolicyBackdoor, OUned and GPOddity tools"
readme = "README.md"
authors = [{name = "Quentin Roland", email = "quentin.roland@synacktiv.com"}]
dependencies = [
    "lxml",
    "pydantic",
]
